# dddmp

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
include/cudd/: dddmp.h
src/: dddmpBinary.c  dddmpConvert.c  dddmpDbg.c  dddmpInt.h  dddmpLoad.c  dddmpLoadCnf.c  dddmpNodeAdd.c  dddmpNodeBdd.c  dddmpNodeCnf.c  dddmpStoreAdd.c  dddmpStoreBdd.c  dddmpStoreCnf.c  dddmpStoreMisc.c  dddmpUtil.c
tests/: testdddmp.c
